@@ -1,3 +1,9 @@
+2015-12-10  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftcommon.c (FTDemo_Install_Font): Handle alloc/file errors.
+
+	Problem reported by Alexei.
+
 2015-12-09  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftstring.c (event_angle_change): Wrap angle differently.
